[package]
name = "tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.*", features = ["derive"] }
colored = "2.0.4"
ctrlc = { version = "3.4.1", features = ["termination"] }
once_cell = "1.18.0"
serde = { version = "1.0.*", features = ["derive"] }
toml = "0.8.2"
